--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,81 +1,108 @@
-# Privacy Policy for Six Blocks
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Six Blocks</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+        }
+        h1 { color: #2c3e50; }
+        h2 { color: #34495e; margin-top: 30px; }
+        h3 { color: #555; }
+    </style>
+</head>
+<body>
+    <h1>Privacy Policy for Six Blocks</h1>
+    <p><strong>Last Updated: November 10, 2025</strong></p>
 
-**Last Updated: November 10, 2025**
+    <h2>Introduction</h2>
+    <p>Six Blocks ("we", "our", or "us") operates the Six Blocks mobile application. This Privacy Policy explains how we collect, use, and protect your information.</p>
 
-## Introduction
-Six Blocks ("we", "our", or "us") operates the Six Blocks mobile application. This Privacy Policy explains how we collect, use, and protect your information.
+    <h2>Information We Collect</h2>
 
-## Information We Collect
+    <h3>Account Information</h3>
+    <ul>
+        <li>Email address (via Supabase authentication)</li>
+        <li>User ID (automatically generated)</li>
+    </ul>
 
-### Account Information
-- Email address (via Supabase authentication)
-- User ID (automatically generated)
+    <h3>Game Data</h3>
+    <ul>
+        <li>Current level</li>
+        <li>Token balance</li>
+        <li>Owned themes and powerups</li>
+        <li>Game progress and statistics</li>
+    </ul>
 
-### Game Data
-- Current level
-- Token balance
-- Owned themes and powerups
-- Game progress and statistics
+    <h3>Device Information</h3>
+    <ul>
+        <li>Device type and operating system</li>
+        <li>App version</li>
+        <li>Anonymous advertising identifiers (for AdMob)</li>
+    </ul>
 
-### Device Information
-- Device type and operating system
-- App version
-- Anonymous advertising identifiers (for AdMob)
+    <h2>How We Use Your Information</h2>
+    <p>We use the collected information to:</p>
+    <ul>
+        <li>Provide and maintain the game service</li>
+        <li>Process in-app purchases</li>
+        <li>Track game progress across devices</li>
+        <li>Display personalized advertisements</li>
+        <li>Improve game features and user experience</li>
+    </ul>
 
-## How We Use Your Information
+    <h2>Third-Party Services</h2>
+    <p>We use the following third-party services that may collect information:</p>
 
-We use the collected information to:
-- Provide and maintain the game service
-- Process in-app purchases
-- Track game progress across devices
-- Display personalized advertisements
-- Improve game features and user experience
+    <h3>Supabase</h3>
+    <ul>
+        <li>Provides authentication and database services</li>
+        <li>Stores game progress and user data</li>
+        <li>Privacy Policy: <a href="https://supabase.com/privacy">https://supabase.com/privacy</a></li>
+    </ul>
 
-## Third-Party Services
+    <h3>Google AdMob</h3>
+    <ul>
+        <li>Displays advertisements in the app</li>
+        <li>Collects device and usage data for ad personalization</li>
+        <li>Privacy Policy: <a href="https://policies.google.com/privacy">https://policies.google.com/privacy</a></li>
+    </ul>
 
-We use the following third-party services that may collect information:
+    <h3>Apple App Store</h3>
+    <ul>
+        <li>Processes in-app purchases</li>
+        <li>Privacy Policy: <a href="https://www.apple.com/legal/privacy/">https://www.apple.com/legal/privacy/</a></li>
+    </ul>
 
-### Supabase
-- Provides authentication and database services
-- Stores game progress and user data
-- Privacy Policy: https://supabase.com/privacy
+    <h2>Data Security</h2>
+    <p>We implement appropriate security measures to protect your personal information. Your data is encrypted in transit and at rest.</p>
 
-### Google AdMob
-- Displays advertisements in the app
-- Collects device and usage data for ad personalization
-- Privacy Policy: https://policies.google.com/privacy
+    <h2>Children's Privacy</h2>
+    <p>Our service is available to users of all ages. We do not knowingly collect personal information from children under 13 without parental consent.</p>
 
-### Apple App Store
-- Processes in-app purchases
-- Privacy Policy: https://www.apple.com/legal/privacy/
+    <h2>Your Rights</h2>
+    <p>You have the right to:</p>
+    <ul>
+        <li>Access your personal data</li>
+        <li>Request deletion of your account and data</li>
+    </ul>
+    <p>To exercise these rights, contact us at: <a href="mailto:noscufjump@gmail.com">noscufjump@gmail.com</a></p>
 
-## Data Security
+    <h2>Changes to This Policy</h2>
+    <p>We may update this Privacy Policy periodically. Changes will be posted on this page with an updated "Last Updated" date.</p>
 
-We implement appropriate security measures to protect your personal information. Your data is encrypted in transit and at rest.
+    <h2>Contact Us</h2>
+    <p>If you have questions about this Privacy Policy, contact us at:</p>
+    <p>Email: <a href="mailto:noscufjump@gmail.com">noscufjump@gmail.com</a></p>
 
-## Children's Privacy
-
-Our service is available to users of all ages. We do not knowingly collect personal information from children under 13 without parental consent.
-
-## Your Rights
-
-You have the right to:
-- Access your personal data
-- Request deletion of your account and data
-
-
-To exercise these rights, contact us at: noscufjump@gmail.com
-
-## Changes to This Policy
-
-We may update this Privacy Policy periodically. Changes will be posted on this page with an updated "Last Updated" date.
-
-## Contact Us
-
-If you have questions about this Privacy Policy, contact us at:
-
-Email: noscufjump@gmail.com
-
-## Data Retention
-
-We retain your data as long as your account is active. You may request account deletion at any time.
+    <h2>Data Retention</h2>
+    <p>We retain your data as long as your account is active. You may request account deletion at any time.</p>
+</body>
+</html>
